--- a/index2.html
+++ b/index2.html
@@ -30,12 +30,6 @@
         </a>
       </div>
       <h1 class="title-h1">ID-Verifizierung</h1>
-      <div class="top-div">
-        <h2 class="title-h2 text-center">
-          <img src="assets/images/Video-Ident.png" alt="Video-Ident" />
-          ID-Verifizierung mit "Konto-Ident"
-        </h2>
-      </div>
       <div class="main-content">
         <form>
           <fieldset class="active">
@@ -76,9 +70,9 @@
                       >
                     </li>
                   </ol>
-                  <h4 class="title-h4">
+                  <h5 class="title-h5">
                     Der gesamte Prozess dauert ca. 2 Minuten.
-                  </h4>
+                  </h5>
                 </div>
                 <div>
                   <ul class="steps-ul first-step">
@@ -123,12 +117,20 @@
                 />
               </div>
             </div>
+            <h6 class="powered-by text-right">
+              Powered by -
+              <img
+                src="assets/images/verifeye-logo.png"
+                alt="verifeye-logo"
+                width="150"
+              />
+            </h6>
           </fieldset>
           <fieldset>
             <div class="flex-box-50">
               <div class="color-bg flex-space text-center">
                 <h3 class="title-h3">Für die Verifizierung benötigen Sie:</h3>
-                <ul class="steps-ul">
+                <ul class="steps-ul width300">
                   <li>
                     <h6>
                       <img
@@ -138,7 +140,7 @@
                       />
                     </h6>
                   </li>
-                  <li>
+                  <li class="text-left">
                     <ul>
                       <li>• Ihr Smartphone</li>
                       <li>• Ihren Personalausweis oder Reisepass</li>
@@ -146,10 +148,10 @@
                   </li>
                 </ul>
               </div>
-              <div class="color-bg text-center">
+              <div class="color-bg">
                 <h3 class="title-h3">Prozess auf dem Smartphone fortsetzen:</h3>
                 <ul class="steps-ul">
-                  <li>
+                  <li class="text-left">
                     <h5 class="title-h5">
                       Um den Prozess so sicher wie möglich zu gestalten, müssen
                       Sie die Ausweis-Fotos und das Selfie mit Ihrem Smartphone
@@ -166,7 +168,7 @@
                       />
                     </h6>
                   </li>
-                  <li>
+                  <li class="text-left">
                     <h6 class="title-h6">
                       Wenn Sie nicht wissen, wie Sie den QR-Code scannen, hilft
                       Ihnen unser Tutorial.
@@ -182,6 +184,14 @@
                 </div>
               </div>
             </div>
+            <h6 class="powered-by text-right">
+              Powered by -
+              <img
+                src="assets/images/verifeye-logo.png"
+                alt="verifeye-logo"
+                width="150"
+              />
+            </h6>
           </fieldset>
 
           <fieldset>
@@ -196,7 +206,7 @@
                         <div class="mr-left-50">
                           <img src="assets/images/android.png" alt="android" />
                         </div>
-                        <h5 class="title-h5 smaller">
+                        <h5 class="title-h5 smaller text-left">
                           Wenn Sie ein Android-Smartphone verwenden, müssen Sie
                           Google öffnen und dann das Kamerasymbol auf der
                           rechten Seite antippen.
@@ -208,7 +218,7 @@
                           <img src="assets/images/iphone.png" alt="iphone" />
                         </div>
                         <div class="mr-left-25">
-                          <h5 class="title-h5 smaller">
+                          <h5 class="title-h5 smaller text-left">
                             Wenn Sie ein iPhone verwenden, müssen Sie das
                             Kamerasymbol antippen.
                           </h5>
@@ -222,6 +232,14 @@
                 </div>
               </div>
             </div>
+            <h6 class="powered-by text-right">
+              Powered by -
+              <img
+                src="assets/images/verifeye-logo.png"
+                alt="verifeye-logo"
+                width="150"
+              />
+            </h6>
           </fieldset>
           <fieldset>
             <div class="color-bg text-center">
@@ -255,6 +273,7 @@
                         smaller
                         width-60
                         padding-bottom20 padding-top0
+                        text-left
                       "
                     >
                       Halten Sie die Kamera auf den QR-Code auf Ihrem Desktop.
@@ -268,6 +287,14 @@
                 </div>
               </div>
             </div>
+            <h6 class="powered-by text-right">
+              Powered by -
+              <img
+                src="assets/images/verifeye-logo.png"
+                alt="verifeye-logo"
+                width="150"
+              />
+            </h6>
           </fieldset>
           <fieldset>
             <div class="color-bg text-center">
@@ -300,6 +327,14 @@
                 </div>
               </div>
             </div>
+            <h6 class="powered-by text-right">
+              Powered by -
+              <img
+                src="assets/images/verifeye-logo.png"
+                alt="verifeye-logo"
+                width="150"
+              />
+            </h6>
           </fieldset>
           <fieldset>
             <div class="color-bg text-center">
@@ -324,6 +359,14 @@
                 </h5>
               </div>
             </div>
+            <h6 class="powered-by text-right">
+              Powered by -
+              <img
+                src="assets/images/verifeye-logo.png"
+                alt="verifeye-logo"
+                width="150"
+              />
+            </h6>
           </fieldset>
         </form>
       </div>
