--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
                   </li>
                   <li class="text-left">
                     <ul>
-                      <li>• Ihr Smartphone</li>
-                      <li>• Ihren Personalausweis oder Reisepass</li>
+                      <li>Ihr Smartphone</li>
+                      <li>Ihren Personalausweis oder Reisepass</li>
                     </ul>
                   </li>
                 </ul>
@@ -203,7 +203,7 @@
                     <ul class="mobile-ul">
                       <li>
                         <h5 class="title-h5">Android</h5>
-                        <div class="mr-left-50">
+                        <div>
                           <img src="assets/images/android.png" alt="android" />
                         </div>
                         <h5 class="title-h5 smaller text-left">
@@ -214,7 +214,7 @@
                       </li>
                       <li>
                         <h5 class="title-h5">iPhone</h5>
-                        <div class="mr-left-50">
+                        <div>
                           <img src="assets/images/iphone.png" alt="iphone" />
                         </div>
                         <div class="mr-left-25">
