--- a/index2.html
+++ b/index2.html
@@ -142,8 +142,8 @@
                   </li>
                   <li class="text-left">
                     <ul>
-                      <li>• Ihr Smartphone</li>
-                      <li>• Ihren Personalausweis oder Reisepass</li>
+                      <li>Ihr Smartphone</li>
+                      <li>Ihren Personalausweis oder Reisepass</li>
                     </ul>
                   </li>
                 </ul>
