--- a/index2.html
+++ b/index2.html
@@ -130,7 +130,7 @@
             <div class="flex-box-50">
               <div class="color-bg flex-space text-center">
                 <h3 class="title-h3">Für die Verifizierung benötigen Sie:</h3>
-                <ul class="steps-ul width300">
+                <ul class="steps-ul width300 height380">
                   <li>
                     <h6>
                       <img
@@ -150,7 +150,7 @@
               </div>
               <div class="color-bg">
                 <h3 class="title-h3">Prozess auf dem Smartphone fortsetzen:</h3>
-                <ul class="steps-ul">
+                <ul class="steps-ul height380">
                   <li class="text-left">
                     <h5 class="title-h5">
                       Um den Prozess so sicher wie möglich zu gestalten, müssen
@@ -198,7 +198,7 @@
             <div class="color-bg text-center">
               <div class="width-short">
                 <h3 class="title-h3">Schritt 1: Kamera aktivieren</h3>
-                <ul class="steps-ul">
+                <ul class="steps-ul height380">
                   <li>
                     <ul class="mobile-ul">
                       <li>
@@ -245,7 +245,7 @@
             <div class="color-bg text-center">
               <div class="width-short">
                 <h3 class="title-h3">Schritt 2: QR-Code scannen</h3>
-                <ul class="steps-ul">
+                <ul class="steps-ul height380">
                   <li>
                     <ul class="mobile-ul">
                       <li>
@@ -302,8 +302,8 @@
                 Schritt 3: Setzen Sie die ID-Verifizierung auf Ihrem Smartphone
                 fort
               </h3>
-              <div class="width-short padding-top20">
-                <ul class="steps-ul">
+              <div class="width-short">
+                <ul class="steps-ul height380">
                   <li>
                     <h6>
                       <img
