height changes 29th nov

--- a/index2.html
+++ b/index2.html
@@ -43,7 +43,7 @@
                   <h3 class="title-h3">
                     Wie funktioniert die ID-Verifizierung mit "Konto-Ident"?
                   </h3>
-                  <ol class="first-list">
+                  <ol class="first-list padding-less">
                     <li>
                       <i>1</i>
                       <span
