changes 30th nov

--- a/index2.html
+++ b/index2.html
@@ -70,7 +70,7 @@
                       >
                     </li>
                   </ol>
-                  <h5 class="title-h5">
+                  <h5 class="title-h5 padding-bottom50">
                     Der gesamte Prozess dauert ca. 2 Minuten.
                   </h5>
                 </div>
